# dx-all-suite

./: .gitignore  .gitmodules  AGENTS-KO.md  AGENTS.md  CLAUDE-KO.md  CLAUDE.md  DX_RUNTIME_COMMIT_HASH.txt  GETTING-START-ko.md  GETTING-START.md  README-ko.md  README.md  RELEASE_NOTES.md  archive_dx-compiler.sh  archive_git_repos.sh  docker_build.sh  docker_down.sh  docker_run.sh  opencode.json  session-ses_22e3.md  uninstall.sh
.claude/: settings.json
.github/: copilot-instructions-KO.md  copilot-instructions.md
docker/: Dockerfile.dx-compiler  Dockerfile.dx-modelzoo  Dockerfile.dx-runtime  Dockerfile.dx-runtime.intel_gpu_hw_acc  Dockerfile.intel-hw-acceleration  docker-compose.dev.yml  docker-compose.disable_dxrt_service.yml  docker-compose.intel_gpu_hw_acc.yml  docker-compose.yml
docs/: make_docs.md  mkdocs-template.yml  mkdocs.sh  mkdocs.yml
getting-start/: compiler-6_run_examples_using_simulator.sh  runtime-3_run_example_using_dxrt.sh
getting-started/: compiler-0_install_dx-compiler.sh  compiler-1_download_onnx.sh  compiler-2_setup_calibration_dataset.sh  compiler-4_model_compile.sh  compiler-clean.sh  runtime-0_install_dx-runtime.sh  runtime-2_setup_assets.sh  runtime-3_run_example_using_dxrt.sh  runtime-clean.sh
internal/: docker_build_local_install_test.sh
scripts/: archive_dx-compiler.sh  (+1 more)
tools/dx-agentic-dev-gen/: pyproject.toml
tools/dx-agentic-dev-gen/scripts/: install-hooks.sh  pre-commit-hook.sh  run_all.sh
tools/dx-agentic-dev-gen/src/dx_agentic_dev_gen/: __init__.py  cli.py  constants.py  frontmatter.py  generator.py  transformers.py
(+214 files in other folders)
